webpack dev server, css and fonts

--- a/package.json
+++ b/package.json
@@ -1,33 +1,40 @@
 {
-  "name": "anytype",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anytypeio/js-anytype.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/anytypeio/js-anytype/issues"
-  },
-  "homepage": "https://github.com/anytypeio/js-anytype#readme",
-  "devDependencies": {
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.6.2",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
-  },
-  "dependencies": {
-    "object-assign": "^4.1.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0"
-  }
+	"name": "anytype",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start:watch": "webpack-dev-server --mode=development --env.NODE_ENV=development --history-api-fallback --cache"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/anytypeio/js-anytype.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/anytypeio/js-anytype/issues"
+	},
+	"homepage": "https://github.com/anytypeio/js-anytype#readme",
+	"devDependencies": {
+		"@types/react": "^16.9.2",
+		"@types/react-dom": "^16.9.0",
+		"source-map-loader": "^0.2.4",
+		"ts-loader": "^6.0.4",
+		"typescript": "^3.6.2",
+		"webpack": "^4.39.3",
+		"webpack-cli": "^3.3.7",
+		"webpack-dev-server": "^3.8.0"
+	},
+	"dependencies": {
+		"css-loader": "^3.2.0",
+		"electron": "^6.0.7",
+		"node-sass": "^4.12.0",
+		"object-assign": "^4.1.1",
+		"react": "^16.9.0",
+		"react-dom": "^16.9.0",
+		"sass-loader": "^8.0.0",
+		"style-loader": "^1.0.0",
+		"url-loader": "^2.1.0"
+	}
 }
