--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
 	"name": "anytype",
 	"version": "1.0.0",
 	"description": "",
-	"main": "app.js",
+	"main": "electron.js",
 	"scripts": {
-		"start:watch": "webpack-dev-server --mode=development --env.NODE_ENV=development --history-api-fallback --cache"
+		"lint": "tslint -c tslint.json -p tsconfig.json",
+		"start:watch": "webpack-dev-server --mode=development --env.NODE_ENV=development --history-api-fallback --cache",
+		"start:electron": "./node_modules/.bin/electron .",
+		"start:electron-wait-webpack": "wait-for-localhost 8080 && ./node_modules/.bin/electron .",
+		"start:dev": "npm-run-all --parallel start:watch start:electron-wait-webpack"
 	},
 	"repository": {
 		"type": "git",
@@ -22,19 +26,26 @@
 		"@types/react": "^16.9.2",
 		"@types/react-dom": "^16.9.0",
 		"@types/react-router-dom": "^4.3.5",
+		"electron-dl": "^1.14.0",
+		"electron-log": "^3.0.7",
+		"electron-updater": "^4.1.2",
+		"electron-util": "^0.12.1",
+		"file-loader": "^4.2.0",
+		"npm-run-all": "^4.1.5",
 		"source-map-loader": "^0.2.4",
-		"ts-loader": "^6.0.4",
-		"typescript": "^3.6.2",
+		"ts-loader": "^6.1.0",
+		"typescript": "^3.6.3",
 		"webpack": "^4.39.3",
 		"webpack-cli": "^3.3.8",
 		"webpack-dev-server": "^3.8.0"
 	},
 	"dependencies": {
 		"css-loader": "^3.2.0",
-		"electron": "^6.0.7",
+		"electron": "^6.0.8",
 		"history": "^4.9.0",
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
+		"mobx": "^5.13.0",
 		"node-sass": "^4.12.0",
 		"object-assign": "^4.1.1",
 		"react": "^16.9.0",
