--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
 		"mobx": "^5.13.0",
+		"mobx-react": "^6.1.3",
 		"node-sass": "^4.12.0",
 		"object-assign": "^4.1.1",
 		"react": "^16.9.0",
