--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
         "noImplicitAny": true,
         "module": "commonjs",
         "target": "es6",
-        "jsx": "react"
+        "jsx": "react",
+        "experimentalDecorators": true,
+        "allowSyntheticDefaultImports": true
     }
 }
