--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"mobx-react": "^6.1.3",
 		"node-sass": "^4.12.0",
 		"object-assign": "^4.1.1",
+		"protobufjs": "^6.8.8",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-router-dom": "^5.0.1",
