--- a/package.json
+++ b/package.json
@@ -40,8 +40,16 @@
 		"webpack-dev-server": "^3.8.0"
 	},
 	"dependencies": {
+		"@babel/core": "^7.6.0",
+		"@types/long": "^4.0.0",
+		"@types/node": "^12.7.5",
+		"babel-loader": "^8.0.6",
+		"babel-preset-env": "^1.7.0",
+		"child_process": "^1.0.2",
 		"css-loader": "^3.2.0",
 		"electron": "^6.0.8",
+		"fifo-js": "^2.1.0",
+		"fs": "0.0.1-security",
 		"history": "^4.9.0",
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
@@ -53,6 +61,7 @@
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-router-dom": "^5.0.1",
+		"readline": "^1.3.0",
 		"sass-loader": "^8.0.0",
 		"style-loader": "^1.0.0",
 		"url-loader": "^2.1.0"
