--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
         "target": "es6",
         "jsx": "react",
         "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "allowJs": true,
+        "typeRoots": [ "node_modules/@types", "src/ts/protocol" ]
     }
 }
