--- a/package.json
+++ b/package.json
@@ -43,14 +43,16 @@
 		"@babel/core": "^7.6.0",
 		"@types/long": "^4.0.0",
 		"@types/node": "^12.7.5",
+		"atob": "^2.1.2",
 		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
+		"btoa": "^1.2.1",
 		"child_process": "^1.0.2",
 		"css-loader": "^3.2.0",
 		"electron": "^6.0.8",
 		"fifo-js": "^2.1.0",
 		"fs": "0.0.1-security",
-		"history": "^4.9.0",
+		"history": "^4.10.0",
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
 		"mobx": "^5.13.0",
