--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"typescript": "^3.6.3",
 		"webpack": "^4.39.3",
 		"webpack-cli": "^3.3.8",
-		"webpack-dev-server": "^3.8.0"
+		"webpack-dev-server": "^3.8.0",
+		"wait-for-localhost-cli": "^1.1.0"
 	},
 	"dependencies": {
 		"@babel/core": "^7.6.0",
