--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"atob": "^2.1.2",
 		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
+		"bindings": "^1.5.0",
 		"btoa": "^1.2.1",
 		"child_process": "^1.0.2",
 		"css-loader": "^3.2.0",
