--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"node-sass": "^4.12.0",
 		"object-assign": "^4.1.1",
 		"protobufjs": "^6.8.8",
+		"raf": "^3.4.1",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-router-dom": "^5.0.1",
