new napi communication

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"@types/react-dom": "^16.9.0",
 		"@types/react-router-dom": "^4.3.5",
 		"electron-dl": "^1.14.0",
-		"electron-log": "^3.0.7",
+		"electron-log": "^3.0.8",
 		"electron-updater": "^4.1.2",
 		"electron-util": "^0.12.1",
 		"file-loader": "^4.2.0",
@@ -36,10 +36,10 @@
 		"source-map-loader": "^0.2.4",
 		"ts-loader": "^6.1.0",
 		"typescript": "^3.6.3",
-		"webpack": "^4.39.3",
-		"webpack-cli": "^3.3.8",
-		"webpack-dev-server": "^3.8.0",
-		"wait-for-localhost-cli": "^1.1.0"
+		"wait-for-localhost-cli": "^1.1.0",
+		"webpack": "^4.40.2",
+		"webpack-cli": "^3.3.9",
+		"webpack-dev-server": "^3.8.1"
 	},
 	"dependencies": {
 		"@babel/core": "^7.6.0",
@@ -52,10 +52,10 @@
 		"btoa": "^1.2.1",
 		"child_process": "^1.0.2",
 		"css-loader": "^3.2.0",
-		"electron": "^6.0.8",
+		"electron": "^6.0.10",
 		"emoji-mart": "^2.11.1",
 		"fs": "0.0.1-security",
-		"history": "^4.10.0",
+		"history": "^4.10.1",
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
 		"mobx": "^5.13.0",
