--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 		"npm-run-all": "^4.1.5",
 		"source-map-loader": "^0.2.4",
 		"ts-loader": "^6.1.0",
+		"tslint": "^5.20.0",
+		"tslint-react": "^4.1.0",
 		"typescript": "^3.6.3",
 		"wait-for-localhost-cli": "^1.1.0",
 		"webpack": "^4.40.2",
