--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
 		"bindings": "^1.5.0",
+		"blueimp-load-image": "^2.24.0",
 		"child_process": "^1.0.2",
 		"css-loader": "^3.2.0",
 		"electron": "^6.0.10",
