--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"css-loader": "^3.2.0",
 		"electron": "^6.0.10",
 		"emoji-mart": "^2.11.1",
+		"file-type": "^12.3.0",
 		"fs": "0.0.1-security",
 		"history": "^4.10.1",
 		"jquery": "^3.4.1",
@@ -69,6 +70,7 @@
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-router-dom": "^5.0.1",
+		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"sass-loader": "^8.0.0",
 		"style-loader": "^1.0.0",
