--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@babel/core": "^7.6.0",
 		"@types/intercom-web": "^2.8.7",
 		"@types/long": "^4.0.0",
+		"@types/mobx-devtools-mst": "^0.9.0",
 		"@types/node": "^12.7.5",
 		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
@@ -62,7 +63,9 @@
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
 		"mobx": "^5.13.0",
+		"mobx-devtools-mst": "^0.9.21",
 		"mobx-react": "^6.1.3",
+		"mobx-state-tree": "^3.14.1",
 		"node-sass": "^4.12.0",
 		"object-assign": "^4.1.1",
 		"protobufjs": "^6.8.8",
