--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"url": "git+https://github.com/anytypeio/js-anytype.git"
 	},
 	"author": "",
-	"license": "ISC",
+	"license": "",
 	"bugs": {
 		"url": "https://github.com/anytypeio/js-anytype/issues"
 	},
