--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@types/long": "^4.0.0",
 		"@types/mobx-devtools-mst": "^0.9.0",
 		"@types/node": "^12.7.9",
+		"@types/react-beautiful-dnd": "^11.0.3",
 		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
 		"bindings": "^1.5.0",
@@ -70,8 +71,10 @@
 		"protobufjs": "^6.8.8",
 		"raf": "^3.4.1",
 		"react": "^16.10.1",
+		"react-beautiful-dnd": "^11.0.5",
 		"react-dom": "^16.10.1",
 		"react-router-dom": "^5.1.2",
+		"react-sortable-hoc": "^1.10.1",
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"sass-loader": "^8.0.0",
