--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@types/mobx-devtools-mst": "^0.9.0",
 		"@types/node": "^12.7.11",
 		"@types/react-beautiful-dnd": "^11.0.3",
+		"array-move": "^2.1.0",
 		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
 		"bindings": "^1.5.0",
@@ -60,6 +61,7 @@
 		"file-type": "^12.3.0",
 		"fs": "0.0.1-security",
 		"history": "^4.10.1",
+		"install": "^0.13.0",
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
 		"mobx": "^5.14.0",
@@ -67,6 +69,7 @@
 		"mobx-react": "^6.1.3",
 		"mobx-state-tree": "^3.14.1",
 		"node-sass": "^4.12.0",
+		"npm": "^6.11.3",
 		"object-assign": "^4.1.1",
 		"protobufjs": "^6.8.8",
 		"raf": "^3.4.1",
