--- a/package.json
+++ b/package.json
@@ -46,10 +46,13 @@
 	"dependencies": {
 		"@babel/core": "^7.6.3",
 		"@types/intercom-web": "^2.8.7",
+		"@types/lodash": "^4.14.144",
 		"@types/long": "^4.0.0",
 		"@types/mobx-devtools-mst": "^0.9.0",
 		"@types/node": "^12.7.12",
 		"@types/react-beautiful-dnd": "^11.0.3",
+		"@types/react-dnd": "^3.0.2",
+		"@types/react-dnd-html5-backend": "^3.0.2",
 		"array-move": "^2.2.0",
 		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
@@ -64,6 +67,7 @@
 		"install": "^0.13.0",
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
+		"lodash": "^4.17.15",
 		"mobx": "^5.14.2",
 		"mobx-devtools-mst": "^0.9.21",
 		"mobx-react": "^6.1.4",
@@ -75,9 +79,12 @@
 		"raf": "^3.4.1",
 		"react": "^16.11.0",
 		"react-beautiful-dnd": "^11.0.5",
+		"react-dnd": "^9.4.0",
+		"react-dnd-html5-backend": "^9.4.0",
 		"react-dom": "^16.11.0",
 		"react-router-dom": "^5.1.2",
 		"react-sortable-hoc": "^1.10.1",
+		"react-throttle-render": "^2.0.0",
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"sass-loader": "^8.0.0",
