--- a/package.json
+++ b/package.json
@@ -82,9 +82,11 @@
 		"react-dnd": "^9.4.0",
 		"react-dnd-html5-backend": "^9.4.0",
 		"react-dom": "^16.11.0",
+		"react-hot-loader": "^4.12.15",
 		"react-router-dom": "^5.1.2",
 		"react-sortable-hoc": "^1.10.1",
 		"react-throttle-render": "^2.0.0",
+		"react-with-throttle": "^1.0.7",
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"sass-loader": "^8.0.0",
