--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"sass-loader": "^8.0.0",
+		"selection-ranges": "^3.0.3",
 		"style-loader": "^1.0.0",
 		"url-loader": "^2.2.0"
 	}
