--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"rehype": "^9.0.1",
 		"sass-loader": "^8.0.0",
 		"selection-ranges": "^3.0.3",
+		"sprintf-kit": "^2.0.0",
 		"style-loader": "^1.0.0",
 		"url-loader": "^2.2.0"
 	}
