--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"@types/react": "^16.9.11",
 		"@types/react-dom": "^16.9.4",
 		"@types/react-router-dom": "^4.3.5",
-		"electron": "^6.1.4",
+		"electron": "^6.1.5",
 		"electron-builder": "^21.2.0",
 		"file-loader": "^4.2.0",
 		"npm-run-all": "^4.1.5",
@@ -51,11 +51,12 @@
 	},
 	"dependencies": {
 		"@babel/core": "^7.7.2",
+		"@types/i18n": "^0.8.6",
 		"@types/intercom-web": "^2.8.7",
-		"@types/lodash": "^4.14.146",
+		"@types/lodash": "^4.14.149",
 		"@types/long": "^4.0.0",
 		"@types/mobx-devtools-mst": "^0.9.7",
-		"@types/node": "^12.12.7",
+		"@types/node": "^12.12.11",
 		"@types/react-beautiful-dnd": "^11.0.3",
 		"@types/react-dnd": "^3.0.2",
 		"@types/react-dnd-html5-backend": "^3.0.2",
@@ -74,24 +75,26 @@
 		"fs": "0.0.1-security",
 		"highlight.js": "^9.16.2",
 		"history": "^4.10.1",
+		"i18next": "^19.0.1",
 		"install": "^0.13.0",
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
 		"lodash": "^4.17.15",
-		"lowlight": "^1.12.1",
+		"lowlight": "^1.13.0",
 		"mobx": "^5.15.0",
 		"mobx-decorators": "^6.0.1",
 		"mobx-devtools-mst": "^0.9.21",
 		"mobx-react": "^6.1.4",
 		"mobx-state-tree": "^3.15.0",
 		"node-sass": "^4.13.0",
-		"npm": "^6.13.0",
+		"npm": "^6.13.1",
 		"object-assign": "^4.1.1",
 		"protobufjs": "^6.8.8",
 		"raf": "^3.4.1",
-		"react": "^16.11.0",
-		"react-dom": "^16.11.0",
-		"react-hot-loader": "^4.12.17",
+		"react": "^16.12.0",
+		"react-dom": "^16.12.0",
+		"react-hot-loader": "^4.12.18",
+		"react-i18next": "^11.2.2",
 		"react-router-dom": "^5.1.2",
 		"react-sortable-hoc": "^1.10.1",
 		"read-chunk": "^3.2.0",
@@ -116,8 +119,7 @@
 				]
 			}
 		],
-		"asarUnpack": [
-		],
+		"asarUnpack": [],
 		"extraResources": [],
 		"files": [
 			"electron.js",
