--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
 	"devDependencies": {
 		"@types/history": "^4.7.3",
 		"@types/jquery": "^3.3.31",
-		"@types/react": "^16.9.11",
+		"@types/react": "^16.9.13",
 		"@types/react-dom": "^16.9.4",
 		"@types/react-router-dom": "^4.3.5",
 		"electron": "^6.1.5",
 		"electron-builder": "^21.2.0",
-		"file-loader": "^4.2.0",
+		"file-loader": "^4.3.0",
 		"npm-run-all": "^4.1.5",
 		"source-map-loader": "^0.2.4",
 		"ts-loader": "^6.2.1",
@@ -50,13 +50,14 @@
 		"webpack-dev-server": "^3.9.0"
 	},
 	"dependencies": {
-		"@babel/core": "^7.7.2",
+		"@babel/core": "^7.7.4",
 		"@types/i18n": "^0.8.6",
 		"@types/intercom-web": "^2.8.7",
+		"@types/is": "0.0.21",
 		"@types/lodash": "^4.14.149",
 		"@types/long": "^4.0.0",
 		"@types/mobx-devtools-mst": "^0.9.7",
-		"@types/node": "^12.12.11",
+		"@types/node": "^12.12.12",
 		"@types/react-beautiful-dnd": "^11.0.3",
 		"@types/react-dnd": "^3.0.2",
 		"@types/react-dnd-html5-backend": "^3.0.2",
@@ -77,6 +78,7 @@
 		"history": "^4.10.1",
 		"i18next": "^19.0.1",
 		"install": "^0.13.0",
+		"is": "^3.3.0",
 		"jquery": "^3.4.1",
 		"json-loader": "^0.5.7",
 		"lodash": "^4.17.15",
@@ -104,7 +106,7 @@
 		"selection-ranges": "^3.0.3",
 		"sprintf-kit": "^2.0.0",
 		"style-loader": "^1.0.0",
-		"url-loader": "^2.2.0"
+		"url-loader": "^2.3.0"
 	},
 	"build": {
 		"appId": "com.anytype.anytype",
