--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"lint": "tslint -c tslint.json -p tsconfig.json",
 		"update:addon": "./update.sh",
 		"start:watch": "webpack-dev-server --mode=development --env.NODE_ENV=development --history-api-fallback --cache",
+		"start:watch-prod": "webpack-dev-server --mode=production --env.NODE_ENV=production --history-api-fallback --cache",
 		"start:electron": "./node_modules/.bin/electron .",
 		"start:electron-wait-webpack": "wait-for-localhost 8080 && ./node_modules/.bin/electron .",
 		"start:dev": "npm-run-all --parallel start:watch start:electron-wait-webpack",
+		"start:prod": "npm-run-all --parallel start:watch-prod start:electron-wait-webpack",
 		"build": "webpack --mode=development --env.NODE_ENV=development",
 		"build:prod": "webpack --mode=production --env.NODE_ENV=production -p --config webpack.config.js",
 		"dist:mac": "webpack --mode=production --env.NODE_ENV=production -p && DATE=`date '+%Y-%m-%d_%H_%M'` GIT_COMMIT=`git rev-parse --short HEAD` electron-builder --macos",
