--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 	"devDependencies": {
 		"@types/history": "^4.7.3",
 		"@types/jquery": "^3.3.31",
-		"@types/react": "^16.9.13",
+		"@types/react": "^16.9.16",
 		"@types/react-dom": "^16.9.4",
 		"@types/react-router-dom": "^4.3.5",
 		"electron": "^6.1.5",
@@ -45,21 +45,21 @@
 		"ts-loader": "^6.2.1",
 		"tslint": "^5.20.1",
 		"tslint-react": "^4.1.0",
-		"typescript": "^3.7.2",
+		"typescript": "^3.7.3",
 		"wait-for-localhost-cli": "^1.1.0",
 		"webpack": "^4.41.2",
 		"webpack-cli": "^3.3.10",
 		"webpack-dev-server": "^3.9.0"
 	},
 	"dependencies": {
-		"@babel/core": "^7.7.4",
+		"@babel/core": "^7.7.5",
 		"@types/i18n": "^0.8.6",
 		"@types/intercom-web": "^2.8.7",
 		"@types/is": "0.0.21",
 		"@types/lodash": "^4.14.149",
 		"@types/long": "^4.0.0",
 		"@types/mobx-devtools-mst": "^0.9.7",
-		"@types/node": "^12.12.14",
+		"@types/node": "^12.12.16",
 		"@types/react-beautiful-dnd": "^11.0.3",
 		"@types/react-dnd": "^3.0.2",
 		"@types/react-dnd-html5-backend": "^3.0.2",
@@ -68,7 +68,7 @@
 		"babel-preset-env": "^1.7.0",
 		"bindings": "^1.5.0",
 		"blueimp-load-image": "^2.24.0",
-		"css-loader": "^3.2.0",
+		"css-loader": "^3.3.0",
 		"electron-dl": "^1.14.0",
 		"electron-log": "^3.0.9",
 		"electron-updater": "^4.2.0",
@@ -84,13 +84,14 @@
 		"json-loader": "^0.5.7",
 		"lodash": "^4.17.15",
 		"lowlight": "^1.13.0",
+		"mem": "^6.0.1",
 		"mobx": "^5.15.0",
 		"mobx-decorators": "^6.0.1",
 		"mobx-devtools-mst": "^0.9.21",
 		"mobx-react": "^6.1.4",
 		"mobx-state-tree": "^3.15.0",
 		"node-sass": "^4.13.0",
-		"npm": "^6.13.1",
+		"npm": "^6.13.3",
 		"object-assign": "^4.1.1",
 		"protobufjs": "^6.8.8",
 		"raf": "^3.4.1",
