--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"emoji-mart": "^2.11.2",
 		"file-type": "^12.4.2",
 		"fs": "0.0.1-security",
+		"git-revision-webpack-plugin": "^3.0.4",
 		"highlight.js": "^9.17.1",
 		"history": "^4.10.1",
 		"install": "^0.13.0",
@@ -108,6 +109,7 @@
 		"sha1": "^1.1.1",
 		"sprintf-kit": "^2.0.0",
 		"style-loader": "^1.1.2",
+		"uglifyjs-webpack-plugin": "^2.2.0",
 		"url-loader": "^2.3.0"
 	},
 	"build": {
