--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
 		"url": "https://github.com/anytypeio/js-anytype/issues"
 	},
 	"homepage": "https://github.com/anytypeio/js-anytype#readme",
+	"devDependencies": {
+		"webpack": "^4.41.5",
+		"electron": "^6.1.7",
+		"electron-builder": "^21.2.0"
+	},
 	"dependencies": {
 		"@types/history": "^4.7.3",
 		"@types/jquery": "^3.3.31",
 		"@types/react": "^16.9.17",
 		"@types/react-dom": "^16.9.4",
 		"@types/react-router-dom": "^4.3.5",
-		"electron": "^6.1.7",
-		"electron-builder": "^21.2.0",
 		"file-loader": "^4.3.0",
 		"npm-run-all": "^4.1.5",
 		"source-map-loader": "^0.2.4",
@@ -167,8 +170,5 @@
 				"region": "ams3"
 			}
 		]
-	},
-	"devDependencies": {
-		"webpack": "^4.41.5"
 	}
 }
