--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
+        env:
+          GIT_COMMIT: ''
         with:
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
