--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
         uses: samuelmeuli/action-electron-builder@v1
         env:
           GIT_COMMIT: ''
+          DATE: ''
         with:
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
