--- a/package.json
+++ b/package.json
@@ -37,43 +37,34 @@
 		"electron-builder": "^21.2.0"
 	},
 	"dependencies": {
-		"@types/history": "^4.7.3",
-		"@types/jquery": "^3.3.31",
-		"@types/react": "^16.9.17",
-		"@types/react-dom": "^16.9.4",
-		"@types/react-router-dom": "^4.3.5",
-		"file-loader": "^4.3.0",
-		"npm-run-all": "^4.1.5",
-		"source-map-loader": "^0.2.4",
-		"ts-loader": "^6.2.1",
-		"tslint": "^5.20.1",
-		"tslint-react": "^4.1.0",
-		"typescript": "^3.7.4",
-		"wait-for-localhost-cli": "^1.1.0",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.10.1",
-		"@babel/core": "^7.7.7",
+		"@babel/core": "^7.8.3",
+		"@types/history": "^4.7.4",
 		"@types/i18n": "^0.8.6",
 		"@types/intercom-web": "^2.8.7",
 		"@types/is": "0.0.21",
+		"@types/jquery": "^3.3.31",
 		"@types/lodash": "^4.14.149",
 		"@types/long": "^4.0.0",
 		"@types/mobx-devtools-mst": "^0.9.7",
-		"@types/node": "^12.12.24",
+		"@types/node": "^12.12.25",
+		"@types/react": "^16.9.17",
 		"@types/react-beautiful-dnd": "^11.0.4",
 		"@types/react-dnd": "^3.0.2",
 		"@types/react-dnd-html5-backend": "^3.0.2",
+		"@types/react-dom": "^16.9.4",
+		"@types/react-router-dom": "^4.3.5",
 		"array-move": "^2.2.1",
 		"babel-loader": "^8.0.6",
 		"babel-preset-env": "^1.7.0",
 		"bindings": "^1.5.0",
 		"blueimp-load-image": "^2.26.0",
-		"css-loader": "^3.4.1",
+		"css-loader": "^3.4.2",
 		"electron-dl": "^1.14.0",
 		"electron-log": "^3.0.9",
 		"electron-updater": "^4.2.0",
 		"electron-util": "^0.12.3",
 		"emoji-mart": "^2.11.2",
+		"file-loader": "^4.3.0",
 		"file-type": "^12.4.2",
 		"fs": "0.0.1-security",
 		"git-revision-webpack-plugin": "^3.0.4",
@@ -86,13 +77,14 @@
 		"lodash": "^4.17.15",
 		"lowlight": "^1.13.0",
 		"mem": "^6.0.1",
-		"mobx": "^5.15.1",
+		"mobx": "^5.15.2",
 		"mobx-decorators": "^6.0.1",
 		"mobx-devtools-mst": "^0.9.21",
-		"mobx-react": "^6.1.4",
+		"mobx-react": "^6.1.5",
 		"mobx-state-tree": "^3.15.0",
-		"node-sass": "^4.13.0",
-		"npm": "^6.13.4",
+		"node-sass": "^4.13.1",
+		"npm": "^6.13.6",
+		"npm-run-all": "^4.1.5",
 		"object-assign": "^4.1.1",
 		"protobufjs": "^6.8.8",
 		"raf": "^3.4.1",
@@ -104,13 +96,21 @@
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"rehype": "^9.0.1",
-		"sass-loader": "^8.0.0",
+		"sass-loader": "^8.0.2",
 		"selection-ranges": "^3.0.3",
 		"sha1": "^1.1.1",
+		"source-map-loader": "^0.2.4",
 		"sprintf-kit": "^2.0.0",
-		"style-loader": "^1.1.2",
+		"style-loader": "^1.1.3",
+		"ts-loader": "^6.2.1",
+		"tslint": "^5.20.1",
+		"tslint-react": "^4.1.0",
+		"typescript": "^3.7.5",
 		"uglifyjs-webpack-plugin": "^2.2.0",
-		"url-loader": "^2.3.0"
+		"url-loader": "^2.3.0",
+		"wait-for-localhost-cli": "^1.1.0",
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.10.1"
 	},
 	"build": {
 		"appId": "com.anytype.anytype",
@@ -142,7 +142,7 @@
 				"zip"
 			],
 			"category": "public.app-category.productivity",
-			"artifactName": "${productName}-${version}-${env.GIT_COMMIT}-${env.DATE}.${ext}",
+			"artifactName": "${productName}-${version}.${ext}",
 			"publish": [
 				{
 					"provider": "spaces",
