--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,55 +1,35 @@
-name: Electron CD
+# name of your github action
+name: CI
 
-on: [push]
+# this will help you specify where to run 
+on:
+  push:
+    branches:
+    # this will run on the electron branch
+      - master
 
+# this is where the magic happens, each job happens in parallel btw
 jobs:
-  build:
-
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [macOS-10.14, windows-2016, ubuntu-18.04]
-
+  build_on_mac:
+    runs-on: macOS-latest
     steps:
-      - name: Context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
-      - name: Use Node.js 10.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 10.x
-      - name: npm install
-        run: npm install -D
-      - name: Publish mac
-        run: npm run dist:mac
-      - name: Publish win
-        run: npm run dist:win
-      - name: Publish linux
-        run: npm run dist:linux
-      name: Cleanup artifacts
-        if: matrix.os != 'windows-latest'
-        run: |
-          mkdir artifacts
-          mv "dist/(*.exe,*.deb,*.AppImage,*.dmg)" artifacts || true
-      - name: Cleanup artifacts Win
-        if: matrix.os == 'windows-latest'
-        run: |
-          mkdir artifacts
-          mv dist/*.exe artifacts
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: ${{ matrix.os }}
-          path: dist
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: "dist/**"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@master
+      with:
+        ref: electron
+    - uses: actions/setup-node@master
+      with:
+        node-version: 12.10.0
+    - name: see directory
+      run: ls
+      build_on_win:
+      
+runs-on: windows-2016
+    steps:
+    - uses: actions/checkout@master
+      with:
+        ref: feature/github-actions        
+    - uses: actions/setup-node@master
+      with:
+        node-version: 10.16
+    - name: see directory
+      run: ls
