--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
         run: ls
         build_on_win:
       
+  build_on_win:
     runs-on: windows-2016
     steps:
       - uses: actions/checkout@master
