--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,44 @@
-# name of your github action
-name: CI
+name: Release
+on: push
 
-# this will help you specify where to run 
-on:
-  push:
-    branches:
-    # this will run on the electron branch
-      - master
-
-# this is where the magic happens, each job happens in parallel btw
 jobs:
-  build_on_mac:
-    runs-on: macOS-latest
+  release:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
+
     steps:
-      - uses: actions/checkout@master
-        with:
-          ref: electron
-      - uses: actions/setup-node@master
+      - name: Check out Git repository
+        uses: actions/checkout@v1
+
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v1
         with:
           node-version: 12.10.0
-      - name: see directory
-        run: ls
-        build_on_win:
-      
-  build_on_win:
-    runs-on: windows-2016
-    steps:
-      - uses: actions/checkout@master
+
+      - name: Build/release Electron app
+        uses: samuelmeuli/action-electron-builder@v1
         with:
-          ref: feature/github-actions        
-      - uses: actions/setup-node@master
+          # GitHub token, automatically provided to the action
+          # (No need to define this secret in the repo settings)
+          github_token: ${{ secrets.github_token }}
+
+          # If the commit is tagged with a version (e.g. "v1.0.0"),
+          # release the app after building
+          #release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v1
         with:
-          node-version: 10.16
-      - name: see directory
-        run: ls
+          name: ${{matrix.os}}
+          path: artifacts
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: "artifacts/**"
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
