--- a/package.json
+++ b/package.json
@@ -32,11 +32,6 @@
 	},
 	"homepage": "https://github.com/anytypeio/js-anytype#readme",
 	"devDependencies": {
-		"webpack": "^4.41.5",
-		"electron": "^6.1.7",
-		"electron-builder": "^21.2.0"
-	},
-	"dependencies": {
 		"@babel/core": "^7.8.3",
 		"@types/history": "^4.7.4",
 		"@types/i18n": "^0.8.6",
@@ -53,9 +48,26 @@
 		"@types/react-dnd-html5-backend": "^3.0.2",
 		"@types/react-dom": "^16.9.4",
 		"@types/react-router-dom": "^4.3.5",
-		"array-move": "^2.2.1",
+		"webpack": "^4.41.5",
+		"electron": "^6.1.7",
+		"electron-builder": "^21.2.0",
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.10.1",
+		"wait-for-localhost-cli": "^1.1.0",
+		"uglifyjs-webpack-plugin": "^2.2.0",
+		"style-loader": "^1.1.3",
+		"ts-loader": "^6.2.1",
+		"tslint": "^5.20.1",
+		"tslint-react": "^4.1.0",
+		"typescript": "^3.7.5",
+		"url-loader": "^2.3.0",
+		"sass-loader": "^8.0.2",
+		"json-loader": "^0.5.7",
 		"babel-loader": "^8.0.6",
-		"babel-preset-env": "^1.7.0",
+		"babel-preset-env": "^1.7.0"
+	},
+	"dependencies": {
+		"array-move": "^2.2.1",
 		"bindings": "^1.5.0",
 		"blueimp-load-image": "^2.26.0",
 		"css-loader": "^3.4.2",
@@ -73,7 +85,6 @@
 		"install": "^0.13.0",
 		"is": "^3.3.0",
 		"jquery": "^3.4.1",
-		"json-loader": "^0.5.7",
 		"lodash": "^4.17.15",
 		"lowlight": "^1.13.0",
 		"mem": "^6.0.1",
@@ -96,21 +107,10 @@
 		"read-chunk": "^3.2.0",
 		"readline": "^1.3.0",
 		"rehype": "^9.0.1",
-		"sass-loader": "^8.0.2",
 		"selection-ranges": "^3.0.3",
 		"sha1": "^1.1.1",
 		"source-map-loader": "^0.2.4",
-		"sprintf-kit": "^2.0.0",
-		"style-loader": "^1.1.3",
-		"ts-loader": "^6.2.1",
-		"tslint": "^5.20.1",
-		"tslint-react": "^4.1.0",
-		"typescript": "^3.7.5",
-		"uglifyjs-webpack-plugin": "^2.2.0",
-		"url-loader": "^2.3.0",
-		"wait-for-localhost-cli": "^1.1.0",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.10.1"
+		"sprintf-kit": "^2.0.0"
 	},
 	"build": {
 		"appId": "com.anytype.anytype",
