--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'anytypeio/go-anytype-middleware'
-          token: ${{ secrets.GitHub_PAT }}
+          token: ${{ secrets.ACCESS_TOKEN }}
+          path: go-anytype-middleware
 
       - name: Build Middleware
         run: | 
