--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: 'anytypeio/go-anytype-middleware'
-          token: ${{ secrets.ACCESS_TOKEN }}
+          token: ${{ secrets.TOKEN }}
           path: go-anytype-middleware
 
       - name: Build Middleware
@@ -44,7 +44,7 @@ jobs:
       - name: Build Front
         uses: samuelmeuli/action-electron-builder@v1
         with:
-          github_token: ${{ secrets.github_token }}
+          github_token: ${{ secrets.TOKEN }}
 
       - name: Make artifacts dir
         run: | 
@@ -72,4 +72,4 @@ jobs:
         with:
           files: "artifacts/**"
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.TOKEN}}
