--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,8 @@ jobs:
 
       - name: Build Middleware
         run: | 
-          git config --global url."https://ra3orblade:${{secrets.TOKEN}}@github.com/".insteadOf "https://github.com/"
+          export GOPATH=~/go
+          git config --global url."https://${{secrets.USER}}:${{secrets.TOKEN}}@github.com/".insteadOf "https://github.com/"
           cd go-anytype-middleware
           go mod download
           make setup-protoc
