test build fix protoc

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,6 +50,7 @@ jobs:
         uses: Arduino/actions/setup-protoc@master
 
       - name: Build Middleware
+        if: matrix.os != 'windows-latest'
         run: | 
           export GOPATH=~/go
           cd go-anytype-middleware
