test build fix protoc

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,7 @@ jobs:
           export GOPATH=~/go
           cd go-anytype-middleware
           go mod download
+          pwd
           make setup-protoc
           make protos
           make build-lib
