test build fix protoc

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,11 +34,6 @@ jobs:
         with:
           go-version: ${{ matrix.go-version }}
 
-      - name: Set GOPATH
-        if: matrix.os != 'windows-latest'
-        run: |  
-          export GOPATH=~/go
-
       - name: Checkout Middleware
         uses: actions/checkout@v2
         with:
@@ -48,11 +43,13 @@ jobs:
 
       - name: Install Protoc
         uses: Arduino/actions/setup-protoc@master
+        with:
+          repo_token: ${{secrets.TOKEN}}
+        env:
+          GOPATH=~/go
 
       - name: Build Middleware
-        if: matrix.os != 'windows-latest'
         run: | 
-          export GOPATH=~/go
           cd go-anytype-middleware
           go mod download
           pwd
@@ -60,6 +57,8 @@ jobs:
           make protos
           make build-lib
           make build-js
+        env:
+          GOPATH=~/go
 
       - name: Build Front
         uses: samuelmeuli/action-electron-builder@v1
