--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Set GOPATH
         if: matrix.os != 'windows-latest'
         run: |  
-          export GOPATH=~/go
+          go env -w GOPATH=$HOME/go
 
       - name: Checkout Middleware
         uses: actions/checkout@v2
@@ -47,9 +47,16 @@ jobs:
           path: go-anytype-middleware
 
       - name: Install Protoc
-        uses: Arduino/actions/setup-protoc@master
-        with:
-          repo_token: ${{secrets.TOKEN}}
+        run: | 
+          git clone https://${{secrets.USER}}:${{secrets.TOKEN}}@github.com/protocolbuffers/protobuf.git
+          cd protobuf
+          git submodule update --init --recursive
+          ./autogen.sh
+          ./configure
+          make
+          make check
+          sudo make install
+          sudo ldconfig
 
       - name: Build Middleware
         if: matrix.os != 'windows-latest'
