--- a/package.json
+++ b/package.json
@@ -47,24 +47,24 @@
 		"@types/react-dnd-html5-backend": "^3.0.2",
 		"@types/react-dom": "^16.9.4",
 		"@types/react-router-dom": "^4.3.5",
-		"webpack": "^4.41.5",
+		"babel-loader": "^8.0.6",
+		"babel-preset-env": "^1.7.0",
 		"electron": "^6.1.7",
 		"electron-builder": "^21.2.0",
 		"electron-notarize": "^0.2.1",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.10.1",
-		"wait-for-localhost-cli": "^1.1.0",
 		"git-revision-webpack-plugin": "^3.0.4",
-		"uglifyjs-webpack-plugin": "^2.2.0",
+		"json-loader": "^0.5.7",
+		"sass-loader": "^8.0.2",
 		"style-loader": "^1.1.3",
 		"ts-loader": "^6.2.1",
 		"tslint": "^5.20.1",
 		"tslint-react": "^4.1.0",
+		"uglifyjs-webpack-plugin": "^2.2.0",
 		"url-loader": "^2.3.0",
-		"sass-loader": "^8.0.2",
-		"json-loader": "^0.5.7",
-		"babel-loader": "^8.0.6",
-		"babel-preset-env": "^1.7.0"
+		"wait-for-localhost-cli": "^1.1.0",
+		"webpack": "^4.41.5",
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.10.1"
 	},
 	"dependencies": {
 		"array-move": "^2.2.1",
@@ -137,7 +137,6 @@
 			"dist/main.js",
 			"build"
 		],
-
 		"dmg": {
 			"sign": false
 		},
