--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: 12.10.0
 
       - name: Update Addon
-        run: ./update.sh ${{secrets.TOKEN}}
+        run: ./update.sh ${{secrets.TOKEN}} ${{matrix.os}}
 
       - name: Build Front
         uses: samuelmeuli/action-electron-builder@v1
